codegen/tests/ui/main/return-tuple.stderr
error: klyra_runtime::main functions need to return a first class service or 'Result<impl Service, klyra_runtime::Error>

         = help: See the docs for services with first class support
         = note: https://docs.rs/klyra-service/latest/klyra_service/attr.main.html#klyra-supported-services

 --> tests/ui/main/return-tuple.rs:2:28
  |
2 | async fn return_tuple() -> (String, bool) {}
  |                            ^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/main/return-tuple.rs:2:45
  |
2 | async fn return_tuple() -> (String, bool) {}
  |                                             ^ consider adding a `main` function to `$DIR/tests/ui/main/return-tuple.rs`
